cabal-version:   3.0
name:            exh
version:         0.1.0

-- synopsis:
-- description:
-- category:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Poscat
maintainer:      Poscat <poscat@mail.poscat.moe>
copyright:       Copyright (c) Poscat 2021
stability:       alpha
homepage:        https://github.com/poscat0x04/exh
bug-reports:     https://github.com/poscat0x04/exh/issues
extra-doc-files:
  CHANGELOG.md
  README.md

common common-attrs
  build-depends:
    , aeson
    , base               >=4.10 && <5
    , bytestring
    , conduit
    , containers
    , exceptions
    , html-conduit
    , http-client
    , http-client-tls
    , http-conduit
    , lens
    , megaparsec
    , monad-control
    , monad-time
    , mtl
    , pretty-simple
    , quickjs-hs
    , retry
    , tar-conduit
    , text
    , time
    , transformers
    , transformers-base
    , xml-conduit
    , xml-lens

  default-language:   Haskell2010
  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnicodeSyntax
    ViewPatterns

library
  import:          common-attrs
  build-depends:
  exposed-modules:
    Web.Exhentai.API.Auth
    Web.Exhentai.API.Gallery
    Web.Exhentai.API.MPV
    Web.Exhentai.API.Search
    Web.Exhentai.Errors
    Web.Exhentai.Parsing.Gallery
    Web.Exhentai.Parsing.Image
    Web.Exhentai.Parsing.MPV
    Web.Exhentai.Parsing.Search
    Web.Exhentai.Types
    Web.Exhentai.Types.CookieT
    Web.Exhentai.Utils

  other-modules:
  hs-source-dirs:  src

test-suite exh-test
  import:         common-attrs
  type:           exitcode-stdio-1.0
  build-depends:
    , exh
    , hspec

  hs-source-dirs: test
  main-is:        Spec.hs

source-repository head
  type:     git
  location: https://github.com/poscat0x04/exh
